# playground-series-s6e5

./: CLAUDE.md  main.py  pyproject.toml
docs/: eda_insights.md
notebooks/: catboost_model.ipynb  eda.ipynb  model.ipynb
src/: features.py  model.py
submissions/: submission_xgb_auc0.9486_20260501_124950.csv
